crates/glyph-cli/tests/corpus/invalid/case_insensitive_flow_with_if.glyph
skill demo()
    description: "Demo."
    Flow:
        if check_thing()
            "yes"
        else
            "no"

block check_thing() -> Status
    description: "Check."
    flow:
        return <"ok">
